hofix(sidebar): safari had issues with z-index
todo: repoduce and debug

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -619,8 +619,10 @@ kbd {
 }
 
 .sidebar-container {
-  display: flex;
-  flex-direction: column;
+  @media screen and (min-width: $screen-md) {
+    display: flex;
+    flex-direction: column;
+  }
   max-height: calc(100vh - var(--main-document-header-height) - 3rem);
   overflow: auto;
   position: sticky;
